[gd_scene load_steps=13 format=3 uid="uid://crpkpw12lktoc"]

[ext_resource type="Script" uid="uid://u5krhs30o3ik" path="res://Scripts/level_icon.gd" id="1_gn7yy"]
[ext_resource type="Theme" uid="uid://8i27k6tj1d3o" path="res://Other/Themes/basic.tres" id="1_p5ssb"]
[ext_resource type="Texture2D" uid="uid://cgij2ayo7erbd" path="res://Assets/Graphics/sprites/sprites_userInterface.png" id="2_7sswb"]
[ext_resource type="AudioStream" uid="uid://bj7k1b4g32e6q" path="res://Assets/Sounds/sfx/moo.wav" id="3_6faij"]
[ext_resource type="AudioStream" uid="uid://cxrgbraey7ntm" path="res://Assets/Sounds/sfx/rooster_cockcrow.wav" id="3_b50wd"]

[sub_resource type="Animation" id="Animation_w47hc"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon/decoration_glow:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon/decoration_glow:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("icon/decoration_glow:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("icon/decoration_glow:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ipmr1"]
resource_name = "idle_glow"
length = 3.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon/decoration_glow:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon/decoration_glow:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("icon/decoration_glow:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("icon/decoration_glow:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.607843, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qgowu"]
_data = {
&"RESET": SubResource("Animation_w47hc"),
&"idle_glow": SubResource("Animation_ipmr1")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_r7s71"]
atlas = ExtResource("2_7sswb")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhxeg"]
atlas = ExtResource("2_7sswb")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xhdh"]
atlas = ExtResource("2_7sswb")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdhfg"]
atlas = ExtResource("2_7sswb")
region = Rect2(0, 928, 64, 64)

[node name="level_icon" type="Button"]
z_index = 5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme = ExtResource("1_p5ssb")
script = ExtResource("1_gn7yy")

[node name="icon" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(32, 32)
texture = ExtResource("2_7sswb")
region_enabled = true
region_rect = Rect2(0, 448, 64, 64)

[node name="decoration_glow" type="Sprite2D" parent="icon"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
texture_filter = 1
texture = ExtResource("2_7sswb")
region_enabled = true
region_rect = Rect2(0, 512, 64, 64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qgowu")
}
autoplay = "idle_glow"

[node name="icon_state_finished" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 10
position = Vector2(-96, -96)
texture = SubResource("AtlasTexture_r7s71")

[node name="icon_state_allMajorCollectibles" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 10
position = Vector2(-96, -96)
texture = SubResource("AtlasTexture_qhxeg")

[node name="icon_state_allCollectibles" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 10
position = Vector2(-96, -96)
texture = SubResource("AtlasTexture_8xhdh")

[node name="sfx_start" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_b50wd")

[node name="sfx_locked" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_6faij")

[node name="icon_rank" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_vdhfg")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
